# energy-intelligence-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
dashboard/: app.py
energy_intelligence_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ingestion/: energy_charts_prices.py
ml/: __init__.py  features.py  predict.py  train_price_forecast.py
tests/: test_api.py  test_dashboard.py  test_energy_charts_prices.py  test_price_forecast.py
warehouse/: init.sql
