[project]
name = "energy-intelligence-platform"
version = "0.1.0"
description = "End-to-end European energy data platform with ingestion pipelines, PostgreSQL, dashboard, API and forecasting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.37.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["api*", "ingestion*"]

[tool.ruff]
line-length = 100
target-version = "py311"
